--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 bollard = "0.11"
 futures = "0.3"
+linked-hash-map = { version = "0.5", features = [ "serde_impl" ] }
 log = "0.4"
-portpicker = "0.1"
 rand = "0.8"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
