Start servers in parallel

--- a/example-config.toml
+++ b/example-config.toml
@@ -1,3 +1,6 @@
+docker-image = "northstar-dedicated"
+game-dir = "/titanfall"
+
 [defaults]
 graphics-mode = "software"
 should-return-to-lobby = false
