--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,7 +13,6 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-      - uses: Swatinem/rust-cache@v1
 
       - name: Build
         run: cargo build --release
@@ -22,4 +21,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: r2wraith
-          path: ${{ runner.workspace }}/target/release/r2wraith
+          path: ${{ runner.workspace }}/r2wraith
