--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,4 +21,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: r2wraith
-          path: ${{ runner.workspace }}/r2wraith
+          path: ${{ runner.workspace }}/r2wraith/r2wraith/target/release/r2wraith
