--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 bollard = "0.11"
-chrono = "0.4"
+chrono = { version = "0.4", features = [ "serde" ] }
+cron_clock = "0.8"
 futures = "0.3"
 linked-hash-map = { version = "0.5", features = [ "serde_impl" ] }
 log = "0.4"
